# LuisaRender

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  camera.h  common.h  gui.mm  main.cpp  main.mm  ray.h
core/: CMakeLists.txt  camera.h  core_type.h  film.h  geometry.h  geometry.mm  integrator.cpp  integrator.h  light.h  material.h  metal_compat.h  metal_compat.mm  parser.cpp  parser.h  resource_manager.h  resource_manager.mm  saver.h  shape.h  string_manipulation.h  task.h  transform.h  transform.mm  type_reflection.cpp  type_reflection.h
gui/: CMakeLists.txt  imgui_impl_metal.h  imgui_impl_metal.mm  window.h  window.mm
kernels/: CMakeLists.txt  background.metal
resources/: default.metallib  shaders.metallib
resources/kernels/: CMakeLists.txt  build_kernels.py  camera_pinhole.metal  compatibility.h  film_rgb.metal  filter_mitchell_natravali.metal  integrator_path_tracing.metal  sampler_halton.metal
resources/scenes/: cornell_box.luisa  test.scene
shaders/: CMakeLists.txt  background.metal  ray_tracing.metal  split_channels.metal
src/: CMakeLists.txt  luisa_render.h  luisa_render_cameras.h  luisa_render_films.h  luisa_render_filters.h  luisa_render_samplers.h  luisa_render_shapes.h  luisa_render_transforms.h
src/cameras/: luisa_render_cameras.h  perspective_camera.cpp  perspective_camera.h  pinhole_camera.cpp  pinhole_camera.h
src/core/: acceleration_structure.h  accelerator.cpp  accelerator.h  buffer.h  camera.cpp  camera.h  color.h  core_type.h  device.h  film.cpp  film.h  filter.cpp  filter.h  integrator.h  kernel.h  light.cpp  material.cpp  material.h  mathematics.h  parser.cpp  parser.h  ray.h  resource_manager.h  sampler.cpp  sampler.h  saver.cpp  shape.cpp  shape.h  task.cpp  texture.cpp  texture.h  transform.cpp  transform.h  type_reflection.cpp  type_reflection.h
src/devices/: luisa_render_devices.h
src/devices/metal/: metal_acceleration_structure.h  metal_acceleration_structure.mm  metal_buffer.h  metal_buffer.mm  metal_device.h  metal_device.mm  metal_kernel.h  metal_kernel.mm  metal_texture.h  metal_texture.mm
src/films/: luisa_render_films.h  rgb_film.cpp  rgb_film.h
src/filters/: box_filter.cpp  box_filter.h  luisa_render_filters.h  mitchell_netravali_filter.cpp  mitchell_netravali_filter.h
src/integrators/: luisa_render_integrators.h  path_tracing.cpp  path_tracing.h
src/samplers/: halton_sampler.cpp  halton_sampler.h  luisa_render_samplers.h
src/transforms/: luisa_render_transforms.h  static_camera_control.cpp  static_camera_control.h  static_transform.cpp  static_transform.h
src/util/: exception.h  noncopyable.h  string_manipulation.h
util/: camera.h  intersection.h  resource.h
